feat(meshforge): add runtime geometry cache prototype and E2 end-to-end baseline